完成添加内容的相关权限,加入JWT 认证
