# models/swipe.go
@@ -1,0 +1,6 @@
+package models
+// 轮播图列表
+type Swipe struct {
+	Id int `json:"id"`
+	Imgurl string `json:"img_url"`
+}
