# swagger/swagger.json
@@ -1,12 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API",
+        "title": "Vue CMS API",
+        "description": "\"Vue CMS API 服务\"",
         "version": "1.0.0",
-        "termsOfService": "http://beego.me/",
         "contact": {
-            "email": "astaxie@gmail.com"
+            "email": "mail_maomao@613.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,20 +14,110 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/news/": {
-            "get": {
-                "tags": [
-                    "news"
-                ],
-                "description": "获取新闻列表",
-                "operationId": "NewsController./news/"
-            },
+        "/admin/goods/add": {
             "post": {
                 "tags": [
-                    "news"
+                    "admin"
+                ],
+                "description": "添加商品",
+                "operationId": "GoodsController./admin/goods/add",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "title",
+                        "description": "商品标题",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "add_time",
+                        "description": "添加时间",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "content",
+                        "description": "商品描述",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "click",
+                        "description": "点击次数",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "img_url",
+                        "description": "商品图片",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "sell_price",
+                        "description": "售卖价格",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "market_price",
+                        "description": "标记价格",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "stock_quantity",
+                        "description": "库存",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/admin/goods/swipe/{id}": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "根据 商品列表id 添加轮播图[json:切片形式]",
+                "operationId": "GoodsController./admin/goods/swipe/:id",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "商品列表id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "img_url",
+                        "description": "轮播图地址",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/admin/news/add": {
+            "post": {
+                "tags": [
+                    "admin"
                 ],
                 "description": "添加新闻列表 JSON format:[normal]",
-                "operationId": "NewsController./news/",
+                "operationId": "NewsController./admin/news/add",
                 "parameters": [
                     {
                         "in": "body",
@@ -71,6 +160,198 @@
                 ]
             }
         },
+        "/admin/photos/humInfo/{id}": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "根据图片id 添加图片缩略图列表 JSON format:[切片]",
+                "operationId": "PhotosController./admin/photos/humInfo/:id",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "src",
+                        "description": "图片地址",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "图片列表id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/admin/photos/list": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "添加图片列表 JSON format:[normal]",
+                "operationId": "PhotosController./admin/photos/list",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "title",
+                        "description": "图片类型",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "description": "图片详情 JSON format:[切片形式]",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PhotosList"
+                        }
+                    }
+                ]
+            }
+        },
+        "/admin/photos/types": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "添加图片类型 JSON format:[切片形式]",
+                "operationId": "PhotosController./admin/photos/types",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "title",
+                        "description": "图片类型",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/admin/swipe": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "添加轮播图 JSON format:[切片形式]",
+                "operationId": "SwipeController./admin/swipe/",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "img_url",
+                        "description": "轮播图图片地址",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/admin/update/{id}": {
+            "post": {
+                "tags": [
+                    "admin"
+                ],
+                "description": "后台注册用户信息更新,不允许更新用户名",
+                "operationId": "UserController./admin/update/:id",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "username",
+                        "description": "用户名",
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "password",
+                        "description": "密码",
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "nickname",
+                        "description": "别名",
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "用户id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/goods/info/{id}": {
+            "get": {
+                "tags": [
+                    "goods"
+                ],
+                "description": "根据商品id 获取轮播图列表",
+                "operationId": "GoodsController./goods/info/:id",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "商品id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/goods/list": {
+            "get": {
+                "tags": [
+                    "goods"
+                ],
+                "description": "获取所有端口列表",
+                "operationId": "GoodsController./goods/list",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "pageindex",
+                        "description": "当前页数",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/goods/swipe/{id}": {
+            "get": {
+                "tags": [
+                    "goods"
+                ],
+                "description": "根据商品id 获取轮播图列表",
+                "operationId": "GoodsController./goods/swipe/:id",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "商品id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/news/": {
+            "get": {
+                "tags": [
+                    "news"
+                ],
+                "description": "获取新闻列表",
+                "operationId": "NewsController./news/"
+            }
+        },
         "/news/comments/{id}": {
             "get": {
                 "tags": [
@@ -86,8 +367,24 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "pageindex",
+                        "description": "请求的页面",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
                     }
-                ]
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Comments"
+                        }
+                    }
+                }
             },
             "post": {
                 "tags": [
@@ -175,7 +472,7 @@
             }
         },
         "/photos/humInfo/{id}": {
-            "post": {
+            "get": {
                 "tags": [
                     "photos"
                 ],
@@ -183,11 +480,12 @@
                 "operationId": "PhotosController./photos/humInfo/:id",
                 "parameters": [
                     {
-                        "in": "body",
-                        "name": "src",
-                        "description": "图片地址",
+                        "in": "path",
+                        "name": "id",
+                        "description": "图片列表id",
                         "required": true,
-                        "type": "string"
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ]
             }
@@ -207,33 +505,6 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    }
-                ]
-            }
-        },
-        "/photos/list": {
-            "post": {
-                "tags": [
-                    "photos"
-                ],
-                "description": "添加图片列表 JSON format:[normal]",
-                "operationId": "PhotosController./photos/list",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "title",
-                        "description": "图片类型",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "data",
-                        "description": "图片详情 JSON format:[切片形式]",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.PhotosList"
-                        }
                     }
                 ]
             }
@@ -264,22 +535,6 @@
                 ],
                 "description": "获取图片类型列表",
                 "operationId": "PhotosController./photos/types"
-            },
-            "post": {
-                "tags": [
-                    "photos"
-                ],
-                "description": "添加图片类型 JSON format:[切片形式]",
-                "operationId": "PhotosController./photos/types",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "title",
-                        "description": "图片类型",
-                        "required": true,
-                        "type": "string"
-                    }
-                ]
             }
         },
         "/swipe/": {
@@ -287,30 +542,84 @@
                 "tags": [
                     "swipe"
                 ],
-                "description": "获取轮播图列表",
-                "operationId": "SwipeController.Get all swipe list"
-            },
+                "description": "获取首页轮播图列表",
+                "operationId": "SwipeController./swipe/"
+            }
+        },
+        "/user/login": {
             "post": {
                 "tags": [
-                    "swipe"
+                    "user"
                 ],
-                "description": "添加轮播图 JSON format:[切片形式]",
-                "operationId": "SwipeController.Add swipe",
+                "description": "后台管理登陆",
+                "operationId": "UserController./user/login",
                 "parameters": [
                     {
                         "in": "body",
-                        "name": "img_url",
-                        "description": "轮播图图片地址",
+                        "name": "username",
+                        "description": "用户名",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "password",
+                        "description": "密码",
                         "required": true,
                         "type": "string"
                     }
                 ]
+            }
+        },
+        "/user/register": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "description": "后台注册用户",
+                "operationId": "UserController./user/register",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "username",
+                        "description": "用户名",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "password",
+                        "description": "密码",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "nickname",
+                        "description": "别名",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/video/": {
+            "get": {
+                "tags": [
+                    "video"
+                ],
+                "description": "获取视频列表",
+                "operationId": "VideoController./video/"
             }
         }
     },
     "definitions": {
         "lib.Time": {
             "title": "Time",
+            "type": "object"
+        },
+        "models.Comments": {
+            "title": "Comments",
             "type": "object"
         },
         "models.NewsContents": {
